# github-flashlight

./: .env.example  .gitignore  README.md  SYSTEM.md  manifest.json  pyproject.toml  security_review.md
.burr-ui-venv/: pyvenv.cfg
.github/workflows/: test.yml
agent/: agent.py  burr_app.py  burr_observability.py  callbacks.py  callbacks_langgraph_legacy.py  cli.py  graph.py  graph_langgraph_legacy.py  orchestrator_langgraph_legacy.py  state.py  tools.py
agent/discovery/: __init__.py  engine.py  validator.py
agent/prompts/: architecture_documenter.txt  (+3 more)
architecture_docs/: architecture.md  quick_reference.md
code_analysis_agent/: __init__.py  agent.py
dependency_graphs/: application_graph.json  application_graph.md  library_graph.json  library_graph.md
observability/: get_log_subdirectories.sh  get_session_id.sh  live_monitor.sh  serve_logs.py  session_profiler.html  tool_calls_viewer.html
rag/: app.py  tools.py
scripts/: build_analysis_data.py  build_dependency_graph.py  build_knowledge_graph.py
service_analyses/: @eigenda-contracts.md  @openzeppelin-contracts-upgradeable.md  @openzeppelin-contracts.md  api-server.md  api.md  aws-dynamodb.md  aws-s3.md  clients.md  common.md  contracts-core.md  contracts-integrations.md  contracts-periphery.md  core-contracts.md  core.md  crypto.md  disperser-apiserver.md  disperser-batcher.md  disperser-blobapi.md  disperser-controller.md  disperser-dataapi.md  disperser-encoder.md  disperser.md  ds-test.md  eigenda-batch-metadata.md  eigenda-ethereum.md  eigenda-operator-state.md  eigenda-payments.md  eigenda-proxy.md  eigenda-srs-data.md  eigenda-subgraphs.md  eigenda-tests.md  eigenda-verification.md  eigenlayer-contracts.md  ejector.md  encoding.md  ethereum-rpc.md  ffi.md  forge-std.md  indexer.md  integrations.md  (+8 more)
service_discovery/: applications.json  components.json  libraries.json
templates/: architecture_template.md  quick_reference_template.md
tests/: test_analyze_current_depth.py  test_citations.py  test_cli_diff.py  test_component_schema.py  test_manifest.py  test_prompt.py
(+110 files in other folders)
