[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "code-analysis-agent"
version = "0.1.0"
description = "Dependency-aware codebase analysis agent using Claude Agent SDK"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
rag = [
    "streamlit>=1.35.0",
    "anthropic>=0.30.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agent*"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
code-analysis-agent = "agent.agent:chat"
flashlight = "agent.cli:main"
