[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "code-analysis-agent"
version = "0.2.0"
description = "Dependency-aware codebase analysis agent using Burr"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0.0",
    "burr[start]>=0.40.2",
]

[project.optional-dependencies]
rag = [
    "streamlit>=1.35.0",
    "anthropic>=0.30.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agent*"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
code-analysis-agent = "agent.agent:chat"
flashlight = "agent.cli:main"
